--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "type": "module",
   "name": "ui-design-to-develop-handoff",
   "version": "1.0.0",
-  "description": "UI 디자인 핸드오프"
+  "description": "UI 디자인 핸드오프",
+  "scripts": {
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "6.0.7"
+  }
 }
