[구현] MD's Pick 페이지 (with Tailwind CSS)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -144,6 +144,8 @@
     "json": false,
   },
 
+  // "tailwindCSS.rootFontSize": 10,
+
   "tailwindCSS.classAttributes": [
     "class",
     "className",
