--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --cache './src/**/*.js'",
+    "format": "prettier --cache --write './src/**/*.js'"
   },
   "devDependencies": {
+    "@eslint/js": "9.18.0",
     "@types/node": "22.10.7",
     "autoprefixer": "10.4.20",
+    "eslint": "9.18.0",
+    "globals": "15.14.0",
     "postcss": "8.5.1",
+    "prettier": "3.4.2",
+    "sharp": "0.33.5",
+    "svgo": "3.3.2",
     "tailwindcss": "3.4.17",
-    "vite": "6.0.7"
+    "vite": "6.0.7",
+    "vite-plugin-image-optimizer": "1.1.8"
   }
 }
