--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.4.1",
     "postcss": "8.5.1",
+    "postcss-import": "16.1.0",
     "prettier": "3.4.2",
     "sharp": "0.33.5",
     "svgo": "3.3.2",
